Progres Kinerja Mahasiswa, Dashboard Super Admin, dan Icon pada button Action

--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -6194,6 +6194,18 @@ a.close.disabled {
   }
 }
 
+.rotate {
+    -moz-transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.rotate.down{
+  -moz-transform:rotate(180deg);
+  -webkit-transform:rotate(180deg);
+  transform:rotate(180deg);
+}
+
 .spinner-grow {
   display: inline-block;
   width: 2rem;
